--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 <body>
 	<header>
 		<div class="logo">
-			<img src="https://github.com/shivam-kothare/themumbaitraveller/blob/main/X%20-Plorer%20(1).jpg" alt="Logo">
+			<img src="https://drive.google.com/file/d/1cKKNVXLYCb9-QOSznBVyHR9SUCZf7EJ1/view?usp=sharing" alt="Logo">
 			<h1>The Mumbai Traveller</h1>
 		</div>
 		<nav>
